--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <title>Upload an image</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Upload an image</h1>
-    <form action="/upload" method="POST" enctype="multipart/form-data">
-      <input type="file" name="image" required><br><br>
-      <label for="allergens">Allergens:</label>
-      <input type="text" name="allergens" id="allergens" required><br><br>
-      <input type="submit" value="Upload">
-    </form>
+    <div class="container mt-5">
+      <h1 class="text-center mb-4">Upload an image</h1>
+      <form action="/upload" method="POST" enctype="multipart/form-data">
+        <div class="form-group">
+          <label for="image">Select an image:</label>
+          <input type="file" class="form-control-file" id="image" name="image" required>
+        </div>
+        <div class="form-group">
+          <label for="allergens">Allergens:</label>
+          <input type="text" class="form-control" id="allergens" name="allergens" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Upload</button>
+      </form>
+    </div>
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
