--- a/templates/demoVideoCanvas.html
+++ b/templates/demoVideoCanvas.html
@@ -1,122 +1,174 @@
-<!DOCTYPE html>
-<html>
+<html lang=”en”>
 <head>
-    <meta charset="UTF-8">
-    <title>Webcam Photo Uploader</title>
-    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Name of your awesome camera app -->
+    <title>Camera App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<style type="text/css">  
-  /* Flipping the video as it was not mirror view */  
-  video {  
-      -webkit-transform: scaleX(-1);  
-      transform: scaleX(-1);  
-      margin-top: 5px;  
-  }  
-
-  /* Flipping the canvas image as it was not mirror view */  
-  #canvas {  
-      -moz-transform: scaleX(-1);  
-      -o-transform: scaleX(-1);  
-      -webkit-transform: scaleX(-1);  
-      transform: scaleX(-1);  
-      filter: FlipH;  
-      -ms-filter: "FlipH";  
-  }  
-</style> 
+<style>
+    html, body{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    }
+    #camera, #camera--view, #camera--sensor, #camera--output{
+        position: fixed;
+        height: 80%;
+        width: 100%;
+        object-fit: cover;
+    }
+    #camera--view, #camera--sensor, #camera--output{
+        transform: scaleX(-1);
+        filter: FlipH;
+    }
+    .camera-trigger{
+        color: white;
+        border: none;
+        padding: 12px 20px;
+        text-align: center;
+        box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
+    }
+    .taken{
+        height: 80%!important;
+        width: 100% !important;
+        transition: all 0.5s ease-in;
+        z-index: 2;
+    }
+</style>
 <body>
-  <div class="jumbotron" style="margin-top:20px;padding:20px;">    
-    <p><span id="errorMsg"></span></p>    
-    <div class="row">    
-        <div class="col-lg-6">    
-            <!-- Here we streaming video from webcam -->    
-            <h4>    
-                Video coming from Webcam  <button class="btn btn-primary" id="btnCapture">Capture to Canvas >></button>    
-            </h4>    
-            <video id="video" playsinline autoplay></video>    
-        </div>    
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">OCR Allergen Detector</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    <!-- Camera -->
+    <main id="camera">
+        <!-- Camera sensor -->
+        <canvas id="camera--sensor"></canvas>
+        <!-- Camera view -->
+        <video id="camera--view" autoplay playsinline></video>
+        <!-- Camera output -->
+        <img src="//:0" alt="" id="camera--output" style="display: none;">
+        <div class="row align-items-center" id="clickPhoto" style="position: inherit;bottom: 4%;width: 100%;margin: 0 !important;text-align: center;">
+            <div class="col-12">
+                <!-- Camera trigger -->
+                <button class ="camera-trigger btn btn-dark" id="camera--trigger">Take a picture</button>
+            </div>
+        </div> 
+
+        <div class="row align-items-center" id="clickPhotoConfirm" style="display: none;position: inherit;bottom: 4%;width: 100%;margin: 0 !important;text-align: center;">
+            <div class="col-6">
+                <!-- Camera trigger -->
+                <button class ="camera-trigger btn btn-success" id="confirm-button">Confirm</button>
+            </div>
+            <div class="col-6">
+                <!-- Camera trigger -->
+                <button class ="camera-trigger btn btn-danger" id="cancel-button">Cancel</button>
+            </div>
+        </div>
+    </main>
+    <!-- Reference to your JavaScript file -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     
-        <div class="col-lg-6">    
-            <h4>    
-                Captured image from Webcam <input type="button" class="btn btn-primary" id="btnSave" name="btnSave" value="Save the canvas(image) to server" />    
-            </h4>    
-            <!-- Webcam video snapshot -->    
-            <canvas style="border:solid 1px #ddd;background-color:white;" id="canvas" width="475" height="475"></canvas>    
-        </div>    
-    </div>    
-</div> 
-<script type="text/javascript">  
-  var video = document.querySelector("#video");  
+    <script>
+        // Set constraints for the video stream
+        var constraints = { video: { facingMode: "user" }, audio: false };
+        // Define constants
+        const cameraView = document.querySelector("#camera--view"),
+            cameraOutput = document.querySelector("#camera--output"),
+            cameraSensor = document.querySelector("#camera--sensor"),
+            cameraTrigger = document.querySelector("#camera--trigger"),
+            cancelButton = document.querySelector("#cancel-button"),
+            confirmButton = document.querySelector("#confirm-button"),
+            clickPhotoSection = document.querySelector("#clickPhoto"),
+            clickPhotoConfirmSection = document.querySelector("#clickPhotoConfirm")
+        // Access the device camera and stream to cameraView
+        function cameraStart() {
+            navigator.mediaDevices
+                .getUserMedia(constraints)
+                .then(function(stream) {
+                track = stream.getTracks()[0];
+                cameraView.srcObject = stream;
+            })
+            .catch(function(error) {
+                console.error("Oops. Something is broken.", error);
+            });
+        }
+        // Take a picture when cameraTrigger is tapped
+        cameraTrigger.onclick = function() {
+            cameraSensor.width = cameraView.videoWidth;
+            cameraSensor.height = cameraView.videoHeight;
+            cameraSensor.getContext("2d").drawImage(cameraView, 0, 0);
+            cameraOutput.src = cameraSensor.toDataURL("image/png");
+            cameraOutput.classList.add("taken");
+            clickPhotoSection.style.display = "none";
+            clickPhotoConfirmSection.style.display = "flex";
+            cameraOutput.style.display = "block";
+        };
 
-  // Basic settings for the video to get from Webcam  
-  const constraints = {  
-      audio: false,  
-      video: {  
-          width: 475, height: 475  
-      }  
-  };  
+        // Take a picture when cameraTrigger is tapped
+        cancelButton.onclick = function() {
+            clickPhotoSection.style.display = "flex";
+            clickPhotoConfirmSection.style.display = "none";
+            cameraOutput.style.display = "none";
+        };
 
-  // This condition will ask permission to user for Webcam access  
-  if (navigator.mediaDevices.getUserMedia) {  
-      navigator.mediaDevices.getUserMedia(constraints)  
-          .then(function (stream) {  
-              video.srcObject = stream;  
-          })  
-          .catch(function (err0r) {  
-              console.log("Something went wrong!");  
-          });  
-  }  
+        confirmButton.onclick = function() {
+            var imagebase64data = cameraOutput.src;  
+            imagebase64data = imagebase64data.replace('data:image/png;base64,', '');  
+            jQuery.ajax({  
+                type: 'POST',  
+                url: '/upload', 
+                data:{"image_data": imagebase64data},  
+                contentType: 'application/x-www-form-urlencoded',   
+                success: function (out) {  
+                    alert(out.status);  
+                },
+                error: function (out) {  
+                    alert("Upload Unsuccesful !!!");  
+                } 
+            });
+        };
 
-  function stop(e) {  
-      var stream = video.srcObject;  
-      var tracks = stream.getTracks();  
+        // Start the video stream when the window loads
+        window.addEventListener("load", cameraStart, false);
+    </script>
 
-      for (var i = 0; i < tracks.length; i++) {  
-          var track = tracks[i];  
-          track.stop();  
-      }  
-      video.srcObject = null;  
-  }  
-</script>  
-
-<script type="text/javascript">  
-  // Below code to capture image from Video tag (Webcam streaming)  
-  $("#btnCapture").click(function () {  
-      var canvas = document.getElementById('canvas');  
-      var context = canvas.getContext('2d');  
-
-      // Capture the image into canvas from Webcam streaming Video element  
-      context.drawImage(video, 0, 0);  
-  });  
-
-  // Upload image to server - ajax call - with the help of base64 data as a parameter  
-  $("#btnSave").click(function () {  
-
-      // Below new canvas to generate flip/mirron image from existing canvas  
-      var destinationCanvas = document.createElement("canvas");  
-      var destCtx = destinationCanvas.getContext('2d');  
-
-
-      destinationCanvas.height = 500;  
-      destinationCanvas.width = 500;  
-
-      destCtx.translate(video.videoWidth, 0);  
-      destCtx.scale(-1, 1);  
-      destCtx.drawImage(document.getElementById("canvas"), 0, 0);  
-
-      // Get base64 data to send to server for upload  
-      var imagebase64data = destinationCanvas.toDataURL("image/png");  
-      imagebase64data = imagebase64data.replace('data:image/png;base64,', '');  
-      $.ajax({  
-          type: 'POST',  
-          url: '/upload', 
-          data:{"image_data": imagebase64data},  
-          contentType: 'application/x-www-form-urlencoded',   
-          success: function (out) {  
-              alert('Image uploaded successfully..');  
-          }  
-      });  
-  });  
-</script>  
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 </body>
 </html>
