Addition of Profile Page and Update Feature

--- a/templates/login.html
+++ b/templates/login.html
@@ -105,7 +105,7 @@ button:hover{
       <form method="POST" action="{{ url_for('login') }}">
         <label for="chk" aria-hidden="true">Login</label>
         {% if message %}
-        <p>{{ message }}</p>
+        <p style="color: white; text-align: center;">{{ message }}</p>
         {% endif %}
         <input type="text" name="username" placeholder="Email" required="" id="username">
         <input type="password" name="password" placeholder="Password" required="" id="password">
