--- a/templates/base.html
+++ b/templates/base.html
@@ -8,44 +8,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
+<style>
+  #img{
+    width: 80px;
+    margin-left: 12px;
+  }
+  #navFont{
+    font-size: 25px;
+  }
+  @media screen and (max-width: 600px) {
+  #img{
+    margin-left: 0px;
+    width: 50px;
+    margin-right: 12px;
+  }
+  #navFont{
+    font-size: 18px;
+  }
+}
+</style>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">OCR Allergen Detector</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+          <img src="/static/img/logo.png" alt="" srcset="" id="img">
+          <a class="navbar-brand" href="#" id="navFont">Allergen Detection System</a>
+          <a href="{{ url_for('profile') }}">
+            <img src="https://dubaidentalhospital.ae/en/Img/Avatar-Icon.png" alt="" srcset="" id="img" style="border-radius: 200px;">
+          </a>
         </div>
       </nav>
-
       <!-- Modal -->
       <div class="modal fade" id="productStatusModal" tabindex="-1" role="dialog" aria-labelledby="productStatusModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
