--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,25 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
+<script>
+    window.onload = () => {
+        var user = {{ user | tojson }};
+
+        //gender population
+        gender = document.getElementById("gender");
+        genderOption = gender.querySelector(`option[value='${user.gender}']`);
+        genderOption.selected=true;
+
+        // allergen Population
+        allergenCat = document.getElementById("category")
+        allergenCatOption = allergenCat.querySelector(`option[value='${user.allergenCategory}']`)
+        allergenCatOption.selected = true;
+
+
+    }
+
+</script>
+
 <style>
     body{
     background: #f7f7ff;
