--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,9 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <img src="/static/img/logo.png" alt="" srcset="" id="img">
+          <a href="{{ url_for('index') }}">
+            <img src="/static/img/logo.png" alt="" srcset="" id="img">
+          </a>
           <a class="navbar-brand" href="#" id="navFont">Allergen Detection System</a>
           <a href="{{ url_for('profile') }}">
             <img src="https://dubaidentalhospital.ae/en/Img/Avatar-Icon.png" alt="" srcset="" id="img" style="border-radius: 200px;">
@@ -65,6 +67,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/4.0.4/tesseract.min.js" integrity="sha512-A+5lOL82/sdlk00parfruAQJGmaketFXPrYSICDHH65Zc75IalK8hktarFk9gPrYBjIe21MqyPYmyYw4ZaDUoA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/4.0.4/worker.min.js" integrity="sha512-csHY7fyj4Uhl84hSqgVutWS9BXD0jT5n2H+jEg9JfkTUMjPP2bKugK1CY4bwhfo1lZFvSEZev44ZGmixcco1cQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-      
+
   </body>
 </html>
