--- a/templates/profile.html
+++ b/templates/profile.html
@@ -111,14 +111,6 @@
                                     <input type="email" class="form-control" value="{{ user.email }}" name="email" required>
                                 </div>
                             </div>
-                            <!-- <div class="row mb-3">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Phone</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    <input type="text" class="form-control" value="(239) 816-9029" name="phoneNo">
-                                </div>
-                            </div> -->
                             <div class="row mb-3">
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Mobile</h6>
@@ -152,7 +144,7 @@
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Allergen Category</h6>
                                 </div>
-                                <div class="col-sm-9 text-secondary">
+                                <!-- <div class="col-sm-9 text-secondary">
                                     <select class="form-control" id="category" name="allergy" value="{{ user.allergy }}">
                                         <option value="">-- Select an option --</option>
                                         <option value="gluten">Gluten</option>
@@ -163,8 +155,51 @@
                                         <option value="fruitBased">Fruit Based</option>
                                         <option value="cruciferous">Cruciferous</option>
                                     </select>
+                                </div> -->
+                                <div class="col-sm-9 text-secondary">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="" id="checkbox1">
+                                                <label class="form-check-label" for="checkbox1">
+                                                    Gluten
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="" id="checkbox2">
+                                                <label class="form-check-label" for="checkbox2">
+                                                    Dairy
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="" id="checkbox3">
+                                                <label class="form-check-label" for="checkbox3">
+                                                    Nut
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="" id="checkbox4">
+                                                <label class="form-check-label" for="checkbox4">
+                                                    Soy
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="" id="checkbox5">
+                                                <label class="form-check-label" for="checkbox5">
+                                                    Meat Based
+                                                </label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="" id="checkbox6">
+                                                <label class="form-check-label" for="checkbox6">
+                                                    Fruit Based
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
                             <div class="row">
                                 <div class="col-sm-3"></div>
                                 <div class="col-sm-9 text-secondary" style="text-align: center;">
