Allergen input checkboxes backend changes

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -160,19 +160,19 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="checkbox1">
+                                                <input class="form-check-input" type="checkbox" name="allergens" value="Gluten" id="checkbox1">
                                                 <label class="form-check-label" for="checkbox1">
                                                     Gluten
                                                 </label>
                                             </div>
                                             <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="checkbox2">
+                                                <input class="form-check-input" type="checkbox" name="allergens" value="Dairy" id="checkbox2">
                                                 <label class="form-check-label" for="checkbox2">
                                                     Dairy
                                                 </label>
                                             </div>
                                             <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="checkbox3">
+                                                <input class="form-check-input" type="checkbox" name="allergens" value="Nut" id="checkbox3">
                                                 <label class="form-check-label" for="checkbox3">
                                                     Nut
                                                 </label>
@@ -180,19 +180,19 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="checkbox4">
+                                                <input class="form-check-input" type="checkbox" name="allergens" value="Soy" id="checkbox4">
                                                 <label class="form-check-label" for="checkbox4">
                                                     Soy
                                                 </label>
                                             </div>
                                             <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="checkbox5">
+                                                <input class="form-check-input" type="checkbox" name="allergens" value="Meat Based" id="checkbox5">
                                                 <label class="form-check-label" for="checkbox5">
                                                     Meat Based
                                                 </label>
                                             </div>
                                             <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="checkbox6">
+                                                <input class="form-check-input" type="checkbox" name="allergens" value="Fruit Based" id="checkbox6">
                                                 <label class="form-check-label" for="checkbox6">
                                                     Fruit Based
                                                 </label>
