--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,11 +13,15 @@
         genderOption = gender.querySelector(`option[value='${user.gender}']`);
         genderOption.selected=true;
 
-        // allergen Population
-        allergenCat = document.getElementById("category")
-        allergenCatOption = allergenCat.querySelector(`option[value='${user.allergenCategory}']`)
-        allergenCatOption.selected = true;
-
+        allergenCategory = user.allergenCategory;
+        checkboxes = $("input[name='allergens']")
+        for (var checkbox of checkboxes) {
+            if (allergenCategory.includes(checkbox.value))
+                checkbox.checked=true;
+        }
+        otherAllergen = $("#otherAllergen");
+        otherAllergenList = user.finalAllergenList.pop()
+        otherAllergen.val(otherAllergenList);
 
     }
 
@@ -88,6 +92,13 @@
                                 <span class="text-secondary">Broccoli, Spinach, Celery</span>
                             </li>
                         </ul>
+                        <hr class="my-4">
+                        <div class="row">
+                            <div class="col-sm-9 text-secondary" style="text-align: left;">
+                                <a href="{{ url_for('logout') }}" class="btn btn-dark px-4">Log Out</a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -202,7 +213,7 @@
                                     <h6 class="mb-0">Other Allergens</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    <input type="text" class="form-control" min = 0 name="otherAllergen">
+                                    <input type="text" id="otherAllergen" class="form-control" min = 0 name="otherAllergen">
                                 </div>
                             </div>
 
