--- a/templates/login.html
+++ b/templates/login.html
@@ -1,127 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>Slide Navbar</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+	<meta charset="utf-8">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+	<title>Login</title>
+	<meta content="" name="description">
+	<meta content="" name="keywords">
+
+	<!-- Favicons -->
+	<link href="assets/img/favicon.png" rel="icon">
+	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+	<!-- Google Fonts -->
+	<link
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+		rel="stylesheet">
+
+	<!-- Vendor CSS Files -->
+	<link href="/static/css/vendor/aos/aos.css" rel="stylesheet">
+	<link href="/static/css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/static/css/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+	<link href="/static/css/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+	<link href="/static/css/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+	<link href="/static/css/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+	<link href="/static/css/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+	<!-- Template Main CSS File -->
+	<link href="/static/css/login.css" rel="stylesheet">
 </head>
-<style>
-  body{
-	margin: 0;
-	padding: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
-	font-family: 'Jost', sans-serif;
-	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
-}
-.main{
-	width: 350px;
-	height: 500px;
-	background: red;
-	overflow: hidden;
-	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
-	border-radius: 10px;
-	box-shadow: 5px 20px 50px #000;
-}
-#chk{
-	display: none;
-}
-.signup{
-	position: relative;
-	width:100%;
-	height: 100%;
-}
-label{
-	color: #fff;
-	font-size: 2.3em;
-	justify-content: center;
-	display: flex;
-	margin: 60px;
-	font-weight: bold;
-	cursor: pointer;
-	transition: .5s ease-in-out;
-}
-input{
-	width: 60%;
-	height: 20px;
-	background: #e0dede;
-	justify-content: center;
-	display: flex;
-	margin: 20px auto;
-	padding: 10px;
-	border: none;
-	outline: none;
-	border-radius: 5px;
-}
-button{
-	width: 60%;
-	height: 40px;
-	margin: 10px auto;
-	justify-content: center;
-	display: block;
-	color: #fff;
-	background: #573b8a;
-	font-size: 1em;
-	font-weight: bold;
-	margin-top: 20px;
-	outline: none;
-	border: none;
-	border-radius: 5px;
-	transition: .2s ease-in;
-	cursor: pointer;
-}
-button:hover{
-	background: #6d44b8;
-}
-.login{
-	height: 460px;
-	background: #eee;
-	border-radius: 60% / 10%;
-	transform: translateY(-180px);
-	transition: .8s ease-in-out;
-}
-.login label{
-	color: #573b8a;
-	transform: scale(.6);
-}
 
-#chk:checked ~ .login{
-	transform: translateY(-500px);
-}
-#chk:checked ~ .login label{
-	transform: scale(1);	
-}
-#chk:checked ~ .signup label{
-	transform: scale(.6);
-}
-</style>
-<body>
-	<div class="main">  	
-		<input type="checkbox" id="chk" aria-hidden="true">
 
-    <div class="signup">
-      <form method="POST" action="{{ url_for('login') }}">
-        <label for="chk" aria-hidden="true">Login</label>
-        {% if message %}
-        <p style="color: white; text-align: center;">{{ message }}</p>
-        {% endif %}
-        <input type="text" name="username" placeholder="Email" required="" id="username">
-        <input type="password" name="password" placeholder="Password" required="" id="password">
-        <button type="submit">Login</button>
-      </form>
-    </div>
-
-			<div class="login">
-        <form method="POST" action="{{ url_for('register') }}">
-          <label for="chk" aria-hidden="true">Sign up</label>
-          <input type="text" name="username" placeholder="User name" required="" id="username">
-          <input type="email" name="email" placeholder="Email" required="" id="email">
-          <input type="password" name="password" placeholder="Password" required="" id="password">
-          <button type="submit">Sign up</button>
-        </form>
+<body id="body-profile">
+	<div class="div">
+		<!-- ======= Hero Section ======= -->
+		<section class="sign-in">
+			<div class="container">
+				<div class="signin-content">
+					<div class="signin-image">
+						<figure><img src="/static/img/hero-img.png" alt="sing up image"></figure>
+						<a href="{{ url_for('register') }}" class="signup-image-link">Create an account</a>
+					</div>
+					<div class="signin-form">
+						<h2 class="form-title">Sign In</h2>
+						<form method="POST" action="{{ url_for('login') }}" class="register-form" id="login-form">
+							<div class="form-group">
+								<label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+								<input type="text" name="username" id="username" placeholder="User Name" />
+							</div>
+							<div class="form-group">
+								<label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
+								<input type="password" name="password" id="password" placeholder="Password" />
+							</div>
+							<div class="form-group form-button">
+								<input type="submit" name="signin" id="signin" class="form-submit" value="Log in" />
+							</div>
+						</form>
+					</div>
+				</div>
 			</div>
+		</section>
+
+
+		<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+				class="bi bi-arrow-up-short"></i></a>
 	</div>
+
+	<!-- Vendor JS Files -->
+	<script src="/static/css/vendor/aos/aos.js"></script>
+	<script src="/static/css/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="/static/css/vendor/glightbox/js/glightbox.min.js"></script>
+	<script src="/static/css/vendor/swiper/swiper-bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+
+	<!-- Template Main JS File -->
+	<script src="/static/js/main.js"></script>
+
 </body>
+
 </html>
