--- a/templates/login.html
+++ b/templates/login.html
@@ -44,10 +44,15 @@
 					</div>
 					<div class="signin-form">
 						<h2 class="form-title">Sign In</h2>
+						{%if message %}
+						<p style="color: red; text-align: center; margin-bottom: 15px;">
+							{{ message }}
+						</p>
+						{% endif %}
 						<form method="POST" action="{{ url_for('login') }}" class="register-form" id="login-form">
 							<div class="form-group">
 								<label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-								<input type="text" name="username" id="username" placeholder="User Name" />
+								<input type="email" name="email" id="email" placeholder="Email" />
 							</div>
 							<div class="form-group">
 								<label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
