--- a/templates/register.html
+++ b/templates/register.html
@@ -40,25 +40,28 @@
                     <h2 class="form-title">Sign up</h2>
                     <form method="POST" action="{{ url_for('register') }}" class="register-form" id="register-form">
                         <div class="form-group">
-                            <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                            <input type="text" name="name" id="name" placeholder="Your Name" />
+                            <input type="text" name="name" id="name" placeholder="Your Name" required/>
                         </div>
                         <div class="form-group">
-                            <label for="email"><i class="zmdi zmdi-email"></i></label>
-                            <input type="email" name="email" id="email" placeholder="Your Email" />
+                            <input type="email" name="email" id="email" placeholder="Your Email" required/>
                         </div>
                         <div class="form-group">
-                            <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                            <input type="password" name="pass" id="pass" placeholder="Password" />
+                            <div>
+                                
+                                <div>
+                                    <label for="password"></label>
+                                    <input type="password" name="password" id="password" placeholder="Password" required minlength="8"
+                                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
+                                    title="Must contain at least one number, one uppercase and lowercase letter, and at least 8 or more characters"/>
+                                </div>
+                                <div id="clickable" style="margin-top: -30px;
+                                border-bottom: 1px solid #999; cursor: text;">
+                                    <i class="bi bi-eye-slash" id="togglePassword" style="margin-left: 90%; cursor: pointer;"></i>
+                                </div>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-                            <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" />
-                        </div>
-                        <div class="form-group">
-                            <input type="checkbox" name="agree-term" id="agree-term" />
-                            <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all
-                                statements in <a href="#" class="term-service">Terms of service</a></label>
+                            <input type="password" name="confirm-password" id="confirm-password" placeholder="Repeat your password" required/>
                         </div>
                         <div class="form-group form-button">
                             <input type="submit" name="signup" id="signup" class="form-submit" value="Register" />
@@ -85,7 +88,38 @@
 
     <!-- Template Main JS File -->
     <script src="/static/js/main.js"></script>
+    <script>
+        const passwordInput = document.getElementById('password');
+        const confirmPasswordInput = document.getElementById('confirm-password');
+        const submitButton = document.getElementById('submit-button');
 
+        confirmPasswordInput.addEventListener('input', () => {
+        if (passwordInput.value === confirmPasswordInput.value) {
+            confirmPasswordInput.setCustomValidity('');
+            submitButton.disabled = false;
+        } else {
+            confirmPasswordInput.setCustomValidity('Passwords must match');
+            submitButton.disabled = true;
+        }
+        });
+    </script>
+    <script>
+        const togglePassword = document.querySelector("#togglePassword");
+        const password = document.querySelector("#password");
+
+        togglePassword.addEventListener("click", function () {
+            // toggle the type attribute
+            const type = password.getAttribute("type") === "password" ? "text" : "password";
+            password.setAttribute("type", type);
+            
+            // toggle the icon
+            this.classList.toggle("bi-eye");
+        });
+
+        $("#clickable").click(() => {
+            $("#password").focus();
+        })
+    </script>
 </body>
 
 </html>
