Minor Bug Fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                 <li><a class="nav-link scrollto" href="#features">App Features</a></li>
                 <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li>
 
-                <li><a class="getstarted scrollto" href="{{ url_for('login') }}">Login</a></li>
+                <li><a class="getstarted scrollto" href="{{ url_for('login') }}" class = "logout">Login</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
