--- a/templates/login.html
+++ b/templates/login.html
@@ -55,9 +55,24 @@
 								<input type="email" name="email" id="email" placeholder="Email" />
 							</div>
 							<div class="form-group">
+								<div>
+									
+									<div>
+										<label for="password"></label>
+										<input type="password" name="password" id="password" placeholder="Password" required minlength="8"
+										pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
+										title="Must contain at least one number, one uppercase and lowercase letter, and at least 8 or more characters"/>
+									</div>
+									<div id="clickable" style="margin-top: -30px;
+									border-bottom: 1px solid #999; cursor: text;">
+										<i class="bi bi-eye-slash" id="togglePassword" style="margin-left: 90%; cursor: pointer;"></i>
+									</div>
+								</div>
+							</div>
+							<!-- <div class="form-group">
 								<label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
 								<input type="password" name="password" id="password" placeholder="Password" />
-							</div>
+							</div> -->
 							<div class="form-group form-button">
 								<input type="submit" name="signin" id="signin" class="form-submit" value="Log in" />
 							</div>
@@ -81,6 +96,21 @@
 
 	<!-- Template Main JS File -->
 	<script src="/static/js/main.js"></script>
+	<script>
+		const togglePassword = document.querySelector("#togglePassword");
+        const toggleRepeatPassword = document.querySelector("#toggleRepeatPassword");
+		togglePassword.addEventListener("click", function () {
+            // toggle the type attribute
+            const type = password.getAttribute("type") === "password" ? "text" : "password";
+            password.setAttribute("type", type);
+            
+            // toggle the icon
+            this.classList.toggle("bi-eye");
+        });
+		$("#clickable").click(() => {
+            $("#password").focus();
+        });
+	</script>
 
 </body>
 
